kubernetes_deployments/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: tafcpa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: jeremyanywhere/symp-fastapi:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: my-dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: tafcpa
spec:
  selector:
    app: fastapi
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP  # Internal service
